# backend

./: .env  .env.example  FILE_CONNECTORS_GUIDE.md  README.md  REDIS_INTEGRATION.md  main.py  pyproject.toml  requirements.txt  test_file_connector.py  test_pg_connector.py  test_redis_cache.py
alembic/: env.py
alembic/versions/: 4d5cc6610e00_initial_migration.py  7a1335ae5d93_fix_timestamp_defaults.py  9f17d3fb383a_fix_relationship_issue.py  ab3e476b905d_timezone_issue.py  af2d08c1151b_add_transformer_model.py
app/: worker.py
app/api/: deps.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: alerts.py  connections.py  jobs.py  metadata.py  pipelines.py  system.py  transformers.py  websocket.py  ws.py
app/connectors/: base.py  factory.py  filesystem.py  postgresql.py  s3.py  sqlite.py  utils.py
app/connectors/destinations/: filesystem.py  mssql.py  mysql.py  postgresql.py  s3.py  singer.py
app/connectors/destinations/cloud/: bigquery.py  s3.py  snowflake.py
app/connectors/destinations/file/: filesystem.py
app/connectors/sources/: bigquery.py  filesystem.py  mysql.py  oracle.py  postgresql.py  singer.py  snowflake.py  sqlite.py
app/core/: __init__.py  celery_app.py  celery_scheduler.py  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py  tracing.py
app/models/: database.py  db_models.py  enums.py
app/pipeline/: engine.py  pipeline_callbacks.py  processors.py
app/pipeline/processors/: base.py  noop.py  registry.py  sql.py  sql_processor.py  transform_processors.py  transformer.py
app/schemas/: alert.py  common.py  connection.py  connector_configs.py  job.py  pipeline.py  system.py  transformer.py
app/services/: alert.py  alert_service.py  cache.py  encryption.py  job.py  job_service.py  pipeline.py  pipeline_service.py
app/utils/: common.py  logging.py
app/worker/: __init__.py  app.py  config.py  scheduler.py
app/worker/tasks/: __init__.py  pipeline_tasks.py
docs/: architecture.md  caching.md  connectors.md  roadmap.md  setup.md  standards.md
test_output/customers/: customers_20251130_024634.avro  customers_20251130_024634.csv  customers_20251130_024634.json  customers_20251130_024634.jsonl  customers_20251130_024634.parquet
test_output_roundtrip/users/: users_20251130_024635.parquet
(+18 files in other folders)
